Closed
Bug 591897
Opened 15 years ago
Closed 15 years ago
"Assertion failure: s.slot + 1 == callobj->freeslot,"
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
VERIFIED
FIXED
mozilla2.0b5
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | beta7+ |
People
(Reporter: gkw, Assigned: brendan)
References
Details
(Keywords: assertion, regression, testcase, Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file, 2 obsolete files)
|
2.58 KB,
patch
|
brendan
:
review+
|
Details | Diff | Splinter Review |
(function({
x: [w]
},
x) {
with({}) {}
})()
asserts js debug shell on TM changeset f3e58c264932 at Assertion failure: s.slot + 1 == callobj->freeslot
Probably related to bug 558451.
| Reporter | ||
Updated•15 years ago
|
blocking2.0: --- → ?
| Assignee | ||
Comment 1•15 years ago
|
||
| Assignee | ||
Updated•15 years ago
|
OS: Mac OS X → All
Hardware: x86 → All
Target Milestone: --- → mozilla2.0b5
| Assignee | ||
Comment 2•15 years ago
|
||
Jason is out today and tomorrow, Andreas kindly offered to take. But this is more of an Igor patch, since he did the destructuring parameter special-casing in the local names singleton/array/hash.
/be
Attachment #470547 -
Attachment is obsolete: true
Attachment #470558 -
Flags: review?(igor)
Attachment #470547 -
Flags: review?(jorendorff)
Comment 3•15 years ago
|
||
Comment on attachment 470558 [details] [diff] [review]
proposed fix, with test
This duplicates the code in the !atom case above and should really go into a helper function.
Attachment #470558 -
Flags: review?(igor)
Attachment #470558 -
Flags: review+
Attachment #470558 -
Flags: feedback?(igor)
| Assignee | ||
Comment 4•15 years ago
|
||
Thanks, Igor.
/be
Attachment #470558 -
Attachment is obsolete: true
Attachment #470566 -
Flags: review+
Attachment #470558 -
Flags: feedback?(igor)
| Assignee | ||
Comment 5•15 years ago
|
||
Whiteboard: fixed-in-tracemonkey
Updated•15 years ago
|
blocking2.0: ? → beta6+
| Assignee | ||
Comment 6•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•13 years ago
|
Flags: in-testsuite+
| Reporter | ||
Comment 7•13 years ago
|
||
Testcases have been landed by virtue of being marked in-testsuite+ -> VERIFIED as well.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•