Bug 591897 - "Assertion failure: s.slot + 1 == callobj->freeslot," (r=igor, "CLOSED TREE").